Do not use deprecate URL constructor
Migrate to going through URI.toURL().

Change-Id: I7d0afbd24f9e48639cc7ef70212b764ce36b3045
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>